--- a/style.css
+++ b/style.css
@@ -128,3 +128,33 @@ h1 { color: sienna;
   z-index: -1; */
   clip-path: inherit; 
 }
+.star {
+  height: 200px;
+  width: 200px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  text-align: center;
+  background: darkolivegreen;
+  position: relative;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+
+.star a {
+  color: white;
+  text-decoration: none; 
+}
+
+.star::before {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  background: darkolivegreen;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: -1; */
+  clip-path: inherit; 
+}
+
