--- a/entry-6/style.css
+++ b/entry-6/style.css
@@ -1,227 +1,166 @@
-body {
-    background-color: BurlyWood;
-    margin: 0; 
+body{background-color: palegoldenrod;}
+
+.text {color: sienna;
+  font size:30;
+  text-transform: uppercase;
+  font-family: Helvetica;
+  position: relative;
+  z-index: 1;
 }
-h1{
-  font-family: Arial;
- color:ivory;
-  font-size: 50px; 
-    transition: font-size 0.7s ease; 
-    text-align: center;
+h1 { color: sienna;
+  font size:30;
+  text-transform: uppercase;
+  font-family: Helvetica; 
 }
-h1:hover {
-  font-family: Arial;
-  font-size: 80px; 
-    transition: font-size 0.7s ease; 
-    text-align: center;
-}
-.container {
-  border: 10px solid #ccc;
-  padding: 40px;
-  margin: 10px;
+
+
+.star {
+  height: 200px;
+  width: 200px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   text-align: center;
-  font-family:arial;
+  background: darkolivegreen;
+  color: white;
+  text-transform: uppercase;
+  font-family: Helvetica
 }
 
-.circle {
+.star::before {
   display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
-  color: white; 
-  font-weight: bold;
-  margin: 10px; 
+  height: 100%;
+  background: honeydew;
+  vertical-align: middle;
+  content: '';
 }
-
-.yes {
-  background-color: violet; 
+.star:hover {
+  height: 250px;
+  width: 250px;
+  transition: 0.3s ease;
 }
-.yes:hover {background-color: green;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
-
-.no {
-  background-color: violet; 
-}
-.no:hover {
-  background-color: red;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
-.container {
-  border: 10px solid #ccc;
-  padding: 40px;
-  margin: 10px;
+.star {
+  height: 250px;
+  width: 250px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   text-align: center;
-  font-family:arial;
+  background: darkolivegreen;
+  position: relative; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
 }
 
-.circle {
-  display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
+.star a {
   color: white; 
-  font-weight: bold;
-  margin: 10px; 
+  text-decoration: none; 
 }
 
-.yes {
-  background-color: violet; 
+.star::before {
+  display: inline-block;
+  height: 100%;
+  width: 100%; 
+  background: darkolivegreen;
+  position: absolute; 
+  top: 0; 
+  left: 0;
+  z-index: -1;  */
+  clip-path: inherit; 
 }
-.yes:hover {background-color: red;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
 
-.no {
-  background-color: violet; 
+.star-container {
+  display: flex;
+  justify-content: center; 
+  gap: 20px; 
+  margin-top: 20px; 
 }
-.no:hover {
-  background-color: green;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
-.container {
-  border: 10px solid #ccc;
-  padding: 40px;
-  margin: 10px;
+
+.star {
+  height: 200px;
+  width: 200px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   text-align: center;
-  font-family:arial;
+  background: darkolivegreen;
+  position: relative;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
 }
 
-.circle {
+.star a {
+  color: white;
+  text-decoration: none; 
+}
+
+.star::before {
   display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
-  color: white; 
-  font-weight: bold;
-  margin: 10px; 
+  height: 100%;
+  width: 100%;
+  background: darkolivegreen;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: -1; */
+  clip-path: inherit; 
 }
 
-.yes {
-  background-color: violet; 
-}
-.yes:hover {background-color: green;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
-
-.no {
-  background-color: violet; 
-}
-.no:hover {
-  background-color: red;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
-.container {
-  border: 10px solid #ccc;
-  padding: 40px;
-  margin: 10px;
+.star {
+  height: 200px;
+  width: 200px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   text-align: center;
-  font-family:arial;
+  background: darkolivegreen;
+  position: relative;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
 }
 
-.circle {
+.star a {
+  color: white;
+  text-decoration: none; 
+}
+
+.star::before {
   display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
-  color: white; 
-  font-weight: bold;
-  margin: 10px; 
+  height: 100%;
+  width: 100%;
+  background: darkolivegreen;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: -1; */
+  clip-path: inherit; 
 }
-
-.yes {
-  background-color: violet; 
-}
-.yes:hover {background-color: green;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
-
-.no {
-  background-color: violet; 
-}
-.no:hover {
-  background-color: red;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
-.container {
-  border: 10px solid #ccc;
-  padding: 40px;
-  margin: 10px;
+.star {
+  height: 200px;
+  width: 200px;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   text-align: center;
-  font-family:arial;
+  background: darkolivegreen;
+  position: relative;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
 }
 
-.circle {
+.star a {
+  color: white;
+  text-decoration: none; 
+}
+
+.star::before {
   display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
-  color: white; 
-  font-weight: bold;
-  margin: 10px; 
+  height: 100%;
+  width: 100%;
+  background: darkolivegreen;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: -1; */
+  clip-path: inherit; 
 }
 
-.yes {
-  background-color: violet; 
-}
-.yes:hover {background-color: red;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
-
-.no {
-  background-color: violet; 
-}
-.no:hover {
-  background-color: green;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
-.container {
-  border: 10px solid #808000;
-  padding: 40px;
-  margin: 10px;
-  text-align: center;
-  font-family:arial;
-}
-
-.circle {
-  display: inline-block;
-  width: 100px; 
-  height: 100px; 
-  border-radius: 50%; 
-  line-height: 100px; 
-  color: white; 
-  font-weight: bold;
-  margin: 10px; 
-}
-
-.yes {
-  background-color: violet; 
-}
-.yes:hover {background-color: red;
-width: 120px; 
-  height: 120px; 
-transition: 0.3s ease;}
-
-.no {
-  background-color: violet; 
-}
-.no:hover {
-  background-color: green;
-width: 120px; 
-  height: 120px; 
-  transition: 0.3s ease;}
