--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 { color: sienna;
   font-family: Helvetica; 
 }
 
+
 .star {
   height: 200px;
   width: 200px;
@@ -31,6 +32,11 @@ h1 { color: sienna;
   background: honeydew;
   vertical-align: middle;
   content: '';
+}
+.star:hover {
+  height: 250px;
+  width: 250px;
+  transition: 0.3s ease;
 }
 .star {
   height: 250px;
