--- a/entry-6/style.css
+++ b/entry-6/style.css
@@ -1,170 +1,24 @@
-body{background-color: palegoldenrod;}
-
-.text {color: sienna;
-  font size:30;
-  text-transform: uppercase;
-  font-family: Helvetica;
-  position: relative;
-  z-index: 1;
-}
-h1 { color: sienna;
-  font size:30;
-  text-transform: uppercase;
-  font-family: Helvetica; 
+height: 100px; 
+border-radius: 50%; 
+line-height: 100px; 
+color: white; 
+font-weight: bold;
+margin: 10px; 
 }
 
+.yes {
+background-color: violet; 
+}
+.yes:hover {background-color: red;
+width: 120px; 
+height: 120px; 
+transition: 0.3s ease;}
 
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  color: white;
-  text-transform: uppercase;
-  font-family: Helvetica
+.no {
+background-color: violet; 
 }
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  background: honeydew;
-  vertical-align: middle;
-  content: '';
-}
-.star:hover {
-  height: 250px;
-  width: 250px;
-  transition: 0.3s ease;
-}
-.star {
-  height: 250px;
-  width: 250px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white; 
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%; 
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0;
-  z-index: -1;  */
-  clip-path: inherit; 
-}
-
-.star-container {
-  display: flex;
-  justify-content: center; 
-  gap: 20px; 
-  margin-top: 20px; 
-}
-
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-.star:hover {
-    height: 250px;
-    width: 250px;
-    transition: 0.3s ease;
-  }
+.no:hover {
+background-color: green;
+width: 120px; 
+height: 120px; 
+transition: 0.3s ease;}
