--- a/style.css
+++ b/style.css
@@ -14,60 +14,6 @@ h1 { color: sienna;
 }
 
 
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  color: white;
-  text-transform: uppercase;
-  font-family: Helvetica
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  background: honeydew;
-  vertical-align: middle;
-  content: '';
-}
-.star:hover {
-  height: 250px;
-  width: 250px;
-  transition: 0.3s ease;
-}
-.star {
-  height: 250px;
-  width: 250px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative; 
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white; 
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%; 
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0;
-  z-index: -1;  */
-  clip-path: inherit; 
-}
-
 .star-container {
   display: flex;
   justify-content: center; 
@@ -75,7 +21,7 @@ h1 { color: sienna;
   margin-top: 20px; 
 }
 
-.star {
+.star, .starr {
   height: 200px;
   width: 200px;
   -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
@@ -85,15 +31,23 @@ h1 { color: sienna;
   position: relative;
   display: flex; 
   align-items: center; 
+  text-transform: uppercase;
+  font-family: Helvetica; 
   justify-content: center; 
+  transition: height 0.3s ease, width 0.3s ease; 
 }
 
-.star a {
+.star a, .starr a {
   color: white;
   text-decoration: none; 
 }
 
-.star::before {
+.star:hover, .starr:hover {
+  height: 250px;
+  width: 250px;
+}
+
+.star::before, .starr::before {
   display: inline-block;
   height: 100%;
   width: 100%;
@@ -101,98 +55,11 @@ h1 { color: sienna;
   position: absolute; 
   top: 0; 
   left: 0; 
-  z-index: -1; */
+  z-index: -1; 
   clip-path: inherit; 
 }
 
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-.star {
-  height: 200px;
-  width: 200px;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  text-align: center;
-  background: darkolivegreen;
-  position: relative;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.star a {
-  color: white;
-  text-decoration: none; 
-}
-
-.star::before {
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background: darkolivegreen;
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  z-index: -1; */
-  clip-path: inherit; 
-}
-.star:hover {
+.starr:hover {
   height: 250px;
   width: 250px;
   transition: 0.3s ease;
