--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -57,7 +57,7 @@ display:none;
   background-image: url('https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDI0LTA1L2hpcHBvdW5pY29ybl9iZWFjaF93aXRoX2xlYWZfcGxhbnRfc2hhZG93X2JlYWNoX3dhbGxwYXBlcl9iYWNrZ180ZjA1YzBlMy0zZWI0LTRmYjYtYjMzYS1iNGM5YjIyYmVlNjZfMS5qcGc.jpg');
 }
 .container {
-border: 6px solid #556B2F;
+border: 6px solid #0e448a;
 padding: 40px;
 margin: 10px;
 text-align: left;
