--- a/WHack a MoLE/style.css
+++ b/WHack a MoLE/style.css
@@ -24,3 +24,9 @@ body {
     background-image: url(base.png);
     background-size: cover;
   }
+
+  #board div img {
+    /*all img tags inside the tile div tags*/
+    width: 100px;
+    height: 100px;
+  }
