--- a/WHack a MoLE/style.css
+++ b/WHack a MoLE/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center; background:url("../grass.png");
+    text-align: center; background:url(../grass.png);
     background-size: cover;
   }
   
@@ -21,7 +21,7 @@ body {
     /*board = 540x540, divide into 3x3 tile --> 180x180 per div*/
     width: 180px;
     height: 180px;
-    background-image: url("../vase.png");
+    background-image: url(../vase.png);
     background-size: cover;
   }
 
