--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ h1 { color: sienna;
 }
 
 .star, .starr {
-  height: 200px;
-  width: 200px;
+ /* height: 200px;
+  width: 200px; */
   -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  
   text-align: center;
   background: darkolivegreen;
   position: relative;
